# nom_in_c

./: .gitignore  Cargo.toml  Makefile  Makefile.am  Makefile.cargo  README.md  autogen.sh  configure.ac
capi/: Cargo.toml
capi/include/: embed.h
capi/src/: lib.rs
capi/test_c/: Makefile
embed/: Cargo.toml
embed_capi/: Cargo.toml
embed_capi/include/: embed.h
m4/: .gitignore  ax_cargo.m4
src/: Makefile  lib.rs  main.c
